--- a/lidmagnit/index.html
+++ b/lidmagnit/index.html
@@ -38,7 +38,7 @@
 
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="../img/nav/logo.png" alt=""></a>
+        <a class="navbar-brand page-scroll" href="#"><img src="../img/nav/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="../img/nav/burger.svg" alt="burger">
@@ -48,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#my_expertize">Мой опыт</a>
+                    <a class="nav-link page-scroll" href="#my_expertize">Мой опыт</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                    <a class="nav-link page-scroll" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
+                    <a class="nav-link page-scroll" href="#ya_nastavnik">Я - наставник</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                    <a class="nav-link page-scroll" href="#reviews">Отзывы</a>
                 </li>
 
             </ul>
@@ -83,7 +83,7 @@
                     <div class="card">
                         <p>От <b>Константина Лашкевича</b> - профессионального СЕО и идеолога позитивного менеджмента
                         </p>
-                        <a href="#practics" class="btn btn-success">Получить доступ</a>
+                        <a href="#master_class" class="btn btn-success">Получить доступ</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -201,7 +201,7 @@
                         <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
                         <h2>21 навык, который нужно развить, чтобы стать эффективным ТОП-менеджером
                         </h2>
-                        <a href="#" class="btn btn-success">Получить доступ</a>
+                        <a href="#master_class" class="btn btn-success">Получить доступ</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -213,13 +213,13 @@
     <!-- / sec_checklist -->
 
     <!-- sec_what_results -->
-    <section class="sec sec_what_results sec_what_results_2 media_wrapp bg-green">
+    <section class="sec sec_what_results sec_what_results_2 media_wrapp media_question bg-green">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label2.svg" alt="title_label">
-                <h2>Как выбрать наставника для Х-кратного карьерного роста и сделать настоящий прорыв в результатах?
+                <h2>Как выбрать наставника для <span class="text-nowrap">Х-кратного</span> карьерного роста и сделать настоящий прорыв в результатах?
                 </h2>
                 <p class="mb-5">Мой первый наставник запомнился мне на всю жизнь... Такого *** и в то же время столь
                     мощного менеджера я не встречал. И знаете - он стал фундаментом для моего развития и результата,
@@ -232,7 +232,7 @@
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
-                        <p>Почему наставник - это лучшая<br> возможность Х-кратно вырасти профессионально
+                        <p>Почему наставник - это лучшая<br> возможность <span class="text-nowrap">Х-кратного</span> вырасти профессионально
                         </p>
                     </div>
                 </div>
@@ -267,9 +267,9 @@
                 <div class="col-md-8">
                     <div class="sec_title">
                         <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
-                        <h2>Как выбрать наставника для Х-кратного карьерного роста?
+                        <h2>Как выбрать наставника для <span class="text-nowrap">Х-кратного</span> карьерного роста?
                         </h2>
-                        <a href="#" class="btn btn-success">Получить доступ</a>
+                        <a href="#master_class" class="btn btn-success">Получить доступ</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -281,7 +281,7 @@
     <!-- / sec_checklist -->
 
     <!-- sec_what_results -->
-    <section class="sec sec_what_results sec_what_results_3 media_wrapp bg-orange">
+    <section class="sec sec_what_results sec_what_results_3 media_wrapp media_question bg-orange">
         <div class="container">
             <img alt="" class="abs_pic circle" src="../img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="../img/abs_pic/dubl_line.svg">
@@ -289,12 +289,10 @@
                 <img src="../img/lms_booster/sec_what_results__title-label3.svg" alt="title_label">
                 <h2>Как добиться повышения зарплаты и создать фундамент для дальнейшего карьерного роста?</h2>
                 <div class="row justify-content-center my-5">
-                    <div class="col-md-9">
-                        <p>Я видел сотни и тысячи карьер, как мега успешных, так и провальных! На моем пути попадались
+                    <p>Я видел сотни и тысячи карьер, как мега успешных, так и провальных! На моем пути попадались
                             “полные неучи” в ТОП-менеджерах, и умные ребята, которым не хватало смелости взять себя в
                             руки и начать расти по карьерной лестнице. Отсутствие смелости - заставляло их оставаться на
                             том же уровне заработка, что в прошлых годах... </p>
-                    </div>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -339,9 +337,9 @@
                 <div class="col-md-8">
                     <div class="sec_title">
                         <p>Дополнительно ты получишь ЧЕК-ЛИСТ:</p>
-                        <h2>Х действий, необходимых для повышения зарплаты
+                        <h2>21 действие, необходимых для повышения зарплаты
                         </h2>
-                        <a href="#" class="btn btn-success">Получить доступ</a>
+                        <a href="#master_class" class="btn btn-success">Получить доступ</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -457,7 +455,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
                             </div>
                             <div class="form-group">
                                 <label for="InputEmail" class="text-yellow">E-mail</label>
