--- a/vebinar/index.html
+++ b/vebinar/index.html
@@ -38,7 +38,7 @@
 
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="../img/nav/logo.png" alt=""></a>
+        <a class="navbar-brand page-scroll" href="#"><img src="../img/nav/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="../img/nav/burger.svg" alt="burger">
@@ -48,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#my_expertize">Мой опыт</a>
+                    <a class="nav-link page-scroll" href="#my_expertize">Мой опыт</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                    <a class="nav-link page-scroll" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
+                    <a class="nav-link page-scroll" href="#ya_nastavnik">Я - наставник</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
+                    <a class="nav-link page-scroll" href="#reviews">Отзывы</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -104,7 +104,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                    <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                                    <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
                                 </div>
                                 <div class="form-group">
                                     <label for="InputEmail" class="text-yellow">E-mail</label>
@@ -312,7 +312,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
                             </div>
                             <div class="form-group">
                                 <label for="InputEmail" class="text-yellow">E-mail</label>
@@ -487,7 +487,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
                             </div>
                             <div class="form-group">
                                 <label for="InputEmail" class="text-yellow">E-mail</label>
