--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Давид Плискин</h1>
-                    <p class="undertitle">Библейский коучинг<br>Лайф коучинг</p>
+                    <p class="undertitle">Библейский коучинг<br><br>Лайф коучинг</p>
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Дипломированный коуч IPS с международным сертификатом с сентября 2016 года.</li>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/david.png" alt="SE">
+                        <img src="img/sec_your_mentor/david.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -98,14 +98,14 @@
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
                         <p>Я помню, когда мне было лет 10, мама подарила мне блокнот с вопросами для заполнения "я и мои друзья" - наверное, Вы встречали что-то подобное. И я очень хорошо помню, как я ответил на вопрос "кем ты хочешь стать?". Я написал "волшебником". Теперь я знаю, что настоящее волшебство и радость - видеть Ваш рост, Ваши положительные изменения, Ваше счастье! </p>
                         <p>И сегодня я с радостью помогу Вам:</p>
-                        <p>- Найти Ваше индивидуальное предназначение<br>
-                        - Решить проблемы в семейных отношениях<br>
-                        - Решить проблемы в воспитании детей<br>
-                        - Преодолеть страх, депрессию и т.д<br>
-                        - Найти гармонию в жизни<br>
-                        - Реализовать Ваш личный потенциал<br>
-                        - Развить силу воли<br>
-                        - Увеличить радость в жизни <br>
+                        <p>- Найти Ваше индивидуальное предназначение<br><br>
+                        - Решить проблемы в семейных отношениях<br><br>
+                        - Решить проблемы в воспитании детей<br><br>
+                        - Преодолеть страх, депрессию и т.д<br><br>
+                        - Найти гармонию в жизни<br><br>
+                        - Реализовать Ваш личный потенциал<br><br>
+                        - Развить силу воли<br><br>
+                        - Увеличить радость в жизни <br><br>
                         - И просто быть счастливым человеком здесь и сейчас!
                         </p>
                         <p> Пишите мне прямо сейчас! </p>
