--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Танцую бачату в студии танца La Rosa Negra в Курске.</li>
                         </ul>
                     </div>
-                    <div class="works">
-                        <img src="img/logo.png" alt="">
-                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
@@ -155,7 +152,9 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
-
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите я стану наставником по активации ваших ресурсов для максимальной реализации вашего потенциала?</h2>
