--- a/thx/index.html
+++ b/thx/index.html
@@ -38,7 +38,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- fixed header -->
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand fixed-top">
         <a class="navbar-brand page-scroll" href="#"><img src="../img/nav/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
@@ -47,13 +47,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#ya_nastavnik">Чек-лист</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <a href="#master_class" class="btn btn-success-2 my-2 my-sm-0">Получить доступ</a>
+            <ul class="navbar-nav mr-auto"></ul>
+            <form class="form-inline">
+                <a href="#master_class" class="btn btn-success-2 m-0">Получить доступ</a>
             </form>
         </div>
     </nav>
