--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Михаил Пинтосевич</h1>
-                    <p class="undertitle">* соавтор программы системного подхода коррекции здоровья  "Pintosevich Body Design" (с Ицхаком Пинтосевичем); <br>
-                        * соавтор бестселлера «Живи! 7 заповедей энергии и здоровья»; <br>
-                        * тренер по психо-физической подготовке; <br>
-                        * учёный-исследователь.
-                        </p>
+                    <p class="undertitle"> * тренер по психо-физической подготовке; <br>
+                        * учёный-исследователь; <br>
+                        * соавтор программы системного подхода коррекции здоровья "Pintosevich Body Design" (с Ицхаком Пинтосевичем); <br>
+                        * соавтор бестселлера «Живи! 7 заповедей энергии и здоровья».
+                    </p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Профессиональный спортсмен</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">В прошлом профессиональный спортсмен</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Тренер по психо-физической подготовке международного гроссмейстера Ольги Левиной - многократной чемпионки мира по международным шашкам</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Работает со спортсменами высших квалификаций по лёгкой атлетике</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Привёз в Украину (Харьков) первых учителей Трансцендентальной Медитации Махариши</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Работал с ведущими политиками и бизнесменами Украины, участвовал в выборных компаниях и разрабатывал их стратегию продвижения личных брендов в политических и финансовых институциях США и Израиля</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Привёз в Украину первых учителей Трансцендентальной Медитации Махариши. Более 20 лет изучает медитацию</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Работал с ведущими политиками и бизнесменами Украины, участвовал в выборных компаниях и разрабатывал их стратегию продвижения личных брендов в политических и финансовых институциях
+                                США и Израиля</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Создал студию-продакшн, которая сняла несколько сериалов для НТВ, ТНТ, 1+1, Интер</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Написал и издал вместе с братом Ицхаком книгу “ЖИВИ! Семь заповедей энергии и здоровья”, которая продалась более чем 100 тыс. экземпляров и стала бестселлером</li>
                         </ul>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/mihail.jpg')"></div>
-                        <h5>Константин Лашкевич</h5>
+                        <h5>Михаил Пинтосевич</h5>
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/profile.php?id=100001394628319" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="https://www.instagram.com/pintusevich/" class="item"><img src="img/soc_links/inst.svg" width="25px" alt="inst"></a>
@@ -108,10 +108,12 @@
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
                         <p>Привет! </p>
                         <p>Почти полвека назад я пришёл на стадион в секцию лёгкой атлетики.</p>
-                        <p>Опыт того, что победы в спорте даются кровью, потом и тяжёлым ежедневным трудом, дал мне возможность в дальнейшем стать хорошим тренером. Я принимал участие в подготовке элитных спортсменов, готовя их к победам на крупнейших мировых аренах.</p>
-                        <p>Все эти годы я не прекращал тренировки, изучая и совершенствуя  свои тело и психику. Конечно, под неусыпным медицинским контролем своих друзей-врачей. Я был ужасно удивлен, когда без всяких внешних симптомов у меня обнаружили аутоиммунную патологию щитовидной железы. Для врачей диагноз понятный и лечение очевидное - гормоны до конца жизни. Для меня - это был шок!</p>
+                        <p>Опыт того, что победы в спорте даются кровью, потом и тяжёлым ежедневным трудом, дал мне возможность в дальнейшем стать хорошим тренером. Я принимал участие в подготовке элитных спортсменов, готовя их к победам на
+                            крупнейших мировых аренах.</p>
+                        <p>Все эти годы я не прекращал тренировки, изучая и совершенствуя свои тело и психику. Конечно, под неусыпным медицинским контролем своих друзей-врачей. Я был ужасно удивлен, когда без всяких внешних симптомов у меня
+                            обнаружили аутоиммунную патологию щитовидной железы. Для врачей диагноз понятный и лечение очевидное - гормоны до конца жизни. Для меня - это был шок!</p>
                         <p>В итоге… болезнь побеждена самостоятельно естественным способом без фармакологического вмешательства.</p>
-                        <p>Сейчас ко мне обращаются люди, которые хотят стать  энергичнее и здоровее и готовы работать. Вместе мы составляем индивидуальную программу развития их двигательной активности, дыхания, питания, закаливания …</p>
+                        <p>Сейчас ко мне обращаются люди, которые хотят стать энергичнее и здоровее и готовы работать. Вместе мы составляем индивидуальную программу развития их двигательной активности, дыхания, питания, закаливания …</p>
                         <p>Чем раньше начать работу над своим телесным и психическим здоровьем, тем качественней будет жизнь.</p>
                         <p>Живите счастливо!</p>
                     </div>
@@ -127,14 +129,14 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
-                  <div class="img_wrapp">
-                      <img src="img/sec_your_mentor/mihail.jpg" alt="SE">
-                  </div>
+                    <div class="img_wrapp">
+                        <img src="img/sec_your_mentor/mihail.jpg" alt="SE">
+                    </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите стать энергичнее и здоровее?</h2>
                     <p>Составляем индивидуальную программу развития движения, дыхания, питания и других важных составляющих</p>
-                    <a href="#" class="btn btn-blue">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScVXUQ_olTXZR5q2zVrv1r8VocfurvAWbU22sPSLkleocYyWg/viewform" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -159,15 +161,18 @@
                         <h4 class="card_title">Индивидуальная программа энергии и здоровья</h4>
                         <div class="b-card-body">
                             <p>Здоровье — главный источник твоего успеха и залог позитивного взгляда на жизнь. <br>
-                              Именно от твоего самочувствия зависят твои желания и стремления. Когда ты здоров – ты полон сил и энергии, ты готов покорять любые вершины и воплощать свои мечты.
-                              </p>
-                              <p>Но вот незадача… о состоянии здоровья мы задумываемся тогда, когда начинаем ощущать дискомфорт или заболеваем.</p>
-                              <p>У каждого из нас жизнь проходит в бешеном темпе. Мы стараемся ценить каждую минуту и хотим использовать время с пользой. В результате, часто забываем, что главная цель человека, независимо от того, что он делает — это чувствовать себя хорошо. Поэтому так важно обратить внимание на своё здоровье и свой запас энергии. Этот тандем является основой нормальной, правильной, счастливой жизни.</p>
-                              <p>Иметь большой запас энергии недостаточно, ведь запасы имеют свойство заканчиваться, если их не пополнять.</p>
-                              <p>Очень важно знать о способах восстановления и повышения энергии. Ведь если не подпитывать свой запас энергии тренировками и здоровым образом жизни, ты быстро его теряешь, а вместе с ним и способность позитивно мыслить.</p>
-                              <p>Твоё эмоциональное и физическое самочувствие ухудшаются, ты теряешь бодрость и здоровый сон, а это влияет на твою способность хорошо выполнять свою работу, интеллектуально развиваться и на отношения с родными и близкими.</p>
-                              <p>Индивидуальная программа затрагивает все важные аспекты здорового образа жизни. Каждый получит полезные рекомендации в питании, зарядке, детоксе, беге, медитации, закаливании, дыхании и многому другому.</p>
-                              <p>Если вы никогда особо не заботились о своём здоровье, но вам всегда было интересно с чего начать здоровый образ жизни, тогда этот индивидуальный формат идеален, чтобы помочь вам стать здоровее и энергичнее.</p>
+                                Именно от твоего самочувствия зависят твои желания и стремления. Когда ты здоров – ты полон сил и энергии, ты готов покорять любые вершины и воплощать свои мечты.
+                            </p>
+                            <p>Но вот незадача… о состоянии здоровья мы задумываемся тогда, когда начинаем ощущать дискомфорт или заболеваем.</p>
+                            <p>У каждого из нас жизнь проходит в бешеном темпе. Мы стараемся ценить каждую минуту и хотим использовать время с пользой. В результате, часто забываем, что главная цель человека, независимо от того, что он делает — это
+                                чувствовать себя хорошо. Поэтому так важно обратить внимание на своё здоровье и свой запас энергии. Этот тандем является основой нормальной, правильной, счастливой жизни.</p>
+                            <p>Иметь большой запас энергии недостаточно, ведь запасы имеют свойство заканчиваться, если их не пополнять.</p>
+                            <p>Очень важно знать о способах восстановления и повышения энергии. Ведь если не подпитывать свой запас энергии тренировками и здоровым образом жизни, ты быстро его теряешь, а вместе с ним и способность позитивно мыслить.
+                            </p>
+                            <p>Твоё эмоциональное и физическое самочувствие ухудшаются, ты теряешь бодрость и здоровый сон, а это влияет на твою способность хорошо выполнять свою работу, интеллектуально развиваться и на отношения с родными и
+                                близкими.</p>
+                            <p>Индивидуальная программа затрагивает все важные аспекты здорового образа жизни. Каждый получит полезные рекомендации в питании, зарядке, детоксе, беге, медитации, закаливании, дыхании и многому другому.</p>
+                            <p>Если вы никогда особо не заботились о своём здоровье, но вам всегда было интересно с чего начать здоровый образ жизни, тогда этот индивидуальный формат идеален, чтобы помочь вам стать здоровее и энергичнее.</p>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
@@ -262,7 +267,8 @@
                                     <td>0</td>
                                     <td>20</td>
                                     <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                                </tr><tr>
+                                </tr>
+                                <tr>
                                     <th scope="row">5</th>
                                     <td class="expertise">Аутогенная тренировка</td>
                                     <td>4</td>
@@ -579,7 +585,8 @@
                         <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
                         <h3>Евгений Кирбаба</h3>
                         <p>Тренер по ораторскому мастерству</p>
-                        <i>“Начал бегать с удовольствием! Спасибо Михаилу Пинтосевичу! В школе еле прибегал к финишу в нормативе 3 км. Сейчас легко пробегаю более 7 км. При этом у меня увеличилась стрессоустойчивость, повысился уровень энергии, тело стало более выносливым и подтянутым. И что важно: я научился бегать без травм. Рекомендую индивидуальную программу с Михаилом!”</i>
+                        <i>“Начал бегать с удовольствием! Спасибо Михаилу Пинтосевичу! В школе еле прибегал к финишу в нормативе 3 км. Сейчас легко пробегаю более 7 км. При этом у меня увеличилась стрессоустойчивость, повысился уровень энергии, тело
+                            стало более выносливым и подтянутым. И что важно: я научился бегать без травм. Рекомендую индивидуальную программу с Михаилом!”</i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
@@ -587,7 +594,8 @@
                         <div class="icon" style="background-image: url('img/sec_success_stories/elena.jpg');"></div>
                         <h3>Елена Пятилетова</h3>
                         <p>Проектный менеджер</p>
-                        <i>“Закончилась последняя неделя тренинга "Победа". Результаты превзошли все ожидания! Поняла, что значит для меня питание - это на 70% моё самочувствие. В мою жизнь прочно вошли утренние прогулки вдоль берега озера. Самочувствие сильно улучшилось! ”</i>
+                        <i>“Закончилась последняя неделя тренинга "Победа". Результаты превзошли все ожидания! Поняла, что значит для меня питание - это на 70% моё самочувствие. В мою жизнь прочно вошли утренние прогулки вдоль берега озера.
+                            Самочувствие сильно улучшилось! ”</i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
@@ -595,7 +603,8 @@
                         <div class="icon" style="background-image: url('img/sec_success_stories/yuriy.jpg');"></div>
                         <h3>Юрий Любарский</h3>
                         <p>Professor of Norwegian University of Science and Technology</p>
-                        <i>“В клинике США мне поставили диагноз Боковой амиотрофический склероз (БАС). Это заболевание центральной нервной системы,которое неизбежно приводит тело к параличу,атрофии мышц, остановке дыхания и смерти. Врачи это не лечат. С Михаилом мы составили индивидуальную программу. И теперь я вновь активно двигаюсь и даже пытаюсь бегать! Жизнь продолжается! ”</i>
+                        <i>“В клинике США мне поставили диагноз Боковой амиотрофический склероз (БАС). Это заболевание центральной нервной системы,которое неизбежно приводит тело к параличу,атрофии мышц, остановке дыхания и смерти. Врачи это не
+                            лечат. С Михаилом мы составили индивидуальную программу. И теперь я вновь активно двигаюсь и даже пытаюсь бегать! Жизнь продолжается! ”</i>
                     </div>
                 </div>
             </div>
@@ -619,52 +628,12 @@
                 </div>
                 <div class="col-md-6 img_wrapp2">
                     <img src="img/sec_your_mentor/mihail.jpg" alt="mihail">
-                    <a href="#" class="btn btn-success">Да хочу!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScVXUQ_olTXZR5q2zVrv1r8VocfurvAWbU22sPSLkleocYyWg/viewformи" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- sec_12 -->
-<!--    <section class="sec sec_12">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
-
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
