--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Создал управление маркетинга с оборотом 100 млн./год</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Каждый год осваиваю 2 новых навыка ТРИ диплома с отличием 🎓</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Каждый год осваиваю 2 новых навыка</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">ТРИ диплома с отличием 🎓</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер 👔 </li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Автор книги «СЕМЬ навыков, которые сделают твою жизнь НЕПОВТОРИМОЙ» 📘</li>
                         </ul>
