youtube on swipe

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
                                         <iframe src="https://www.youtube.com/embed/KDh31CRex6c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
@@ -753,7 +753,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
                                         <iframe src="https://www.youtube.com/embed/nxnUsNg-8t8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
@@ -771,7 +771,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
                                         <iframe src="https://www.youtube.com/embed/J7mdrSHPnm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
@@ -789,7 +789,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
                                         <iframe src="https://www.youtube.com/embed/hXggM2PjHhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
