--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
                     <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Деловые контакты </a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#my_articles">Мои статьи</a>
                 </li>
                 <li class="nav-item">
@@ -73,7 +70,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/anna.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -89,7 +86,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/anna.jpg')"></div>
                         <h5>Анна Морозова</h5>
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/anyamodern" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
@@ -150,7 +147,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/product.svg" alt="Generic placeholder image">
                     <div class="media-body">
                         <p class="card_subtitle">Консультирование, обучение, поддержка</p>
                         <h4 class="card_title">Проект «Все для личного бренда»</h4>
@@ -165,8 +162,6 @@
                         <div class="b-card-footer">
                             <div class="counter"></div>
                             <div class="views">
-                                <img class="mr-1" src="img/icons/human.svg">
-
                             </div>
                             <a class="link btn btn-blue" href="http://www.brand-live.ru">Подробнее</a>
                         </div>
@@ -178,7 +173,7 @@
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
                 <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
                 <div class="media align-items-center">
-                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    <div class="border-image" style="background-image: url('img/sec_bio/anna.jpg');">
                     </div>
                     <div class="text">
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
@@ -467,7 +462,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                    <img src="img/sec_your_mentor/anna.png" alt="anna">
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
